@@ -1,13 +1,15 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Feature disabled</title>
+<title>Title</title>
 <script>
 function detectInputTypeColorEnabled() {
     var element = document.getElementById('test')
     element.value = 'should sanitize';
     if (element.value != 'should sanitize')
         document.title = 'Feature enabled';
+    else
+        document.title = 'Feature disabled';
 }
 function updateTitle(element) {
     document.title = element.value;
